simplexParser.py
# Generated from simplex.g4 by ANTLR 4.6
# encoding: utf-8
from antlr4 import *
from io import StringIO



class simplexParser ( Parser ):

    grammarFileName = "simplex.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'_'", "'+'", "'-'", "'*'", "'/'", "'**'", 
                     "'.'", "'='", "<INVALID>", "','", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'>'", "'<'", "':'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'con'", "'sen'", "'cos'", "'tan'", "'exp'", 
                     "'ln'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "MAS", "MENOS", "MULT", 
                      "DIV", "POTENCIA", "PUNTO", "IGUAL", "LETRA", "COMA", 
                      "SALTOLINEA", "BLANCO", "DIGITO", "PARABIERTO", "PARCERRADO", 
                      "MAYOR", "MENOR", "DOSPUNTOS", "EXPONENCIAL", "IMPRIMIR", 
                      "MAXI", "MINI", "RESTRICCIONES", "RESOLVER", "CON", 
                      "SENO", "COSENO", "TANGENTE", "EULER", "LOGARITMO", 
                      "COMENTARIO" ]

    RULE_iniciar = 0
    RULE_programa = 1
    RULE_expresion = 2
    RULE_multiobjetivo = 3
    RULE_resolver = 4
    RULE_problema = 5
    RULE_restricionVariable = 6
    RULE_desigualdadVariable = 7
    RULE_restriccion = 8
    RULE_desigualdad = 9
    RULE_funcionTrans = 10
    RULE_funcion = 11
    RULE_funcionDef = 12
    RULE_nombrefuncion = 13
    RULE_polinomio = 14
    RULE_monomioAdd = 15
    RULE_monomio = 16
    RULE_expMAT = 17
    RULE_variable = 18
    RULE_identificador = 19
    RULE_numero = 20
    RULE_trigonometrica = 21
    RULE_decimal = 22
    RULE_exponencial = 23
    RULE_entero = 24
    RULE_mayorIgual = 25
    RULE_menorIgual = 26

    ruleNames =  [ "iniciar", "programa", "expresion", "multiobjetivo", 
                   "resolver", "problema", "restricionVariable", "desigualdadVariable", 
                   "restriccion", "desigualdad", "funcionTrans", "funcion", 
                   "funcionDef", "nombrefuncion", "polinomio", "monomioAdd", 
                   "monomio", "expMAT", "variable", "identificador", "numero", 
                   "trigonometrica", "decimal", "exponencial", "entero", 
                   "mayorIgual", "menorIgual" ]

    EOF = Token.EOF
    T__0=1
    MAS=2
    MENOS=3
    MULT=4
    DIV=5
    POTENCIA=6
    PUNTO=7
    IGUAL=8
    LETRA=9
    COMA=10
    SALTOLINEA=11
    BLANCO=12
    DIGITO=13
    PARABIERTO=14
    PARCERRADO=15
    MAYOR=16
    MENOR=17
    DOSPUNTOS=18
    EXPONENCIAL=19
    IMPRIMIR=20
    MAXI=21
    MINI=22
    RESTRICCIONES=23
    RESOLVER=24
    CON=25
    SENO=26
    COSENO=27
    TANGENTE=28
    EULER=29
    LOGARITMO=30
    COMENTARIO=31

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class IniciarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programa(self):
            return self.getTypedRuleContext(simplexParser.ProgramaContext,0)


        def getRuleIndex(self):
            return simplexParser.RULE_iniciar

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIniciar" ):
                return visitor.visitIniciar(self)
            else:
                return visitor.visitChildren(self)




    def iniciar(self):

        localctx = simplexParser.IniciarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_iniciar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.programa()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(simplexParser.EOF, 0)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simplexParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(simplexParser.ExpresionContext,i)


        def getRuleIndex(self):
            return simplexParser.RULE_programa

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = simplexParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << simplexParser.MENOS) | (1 << simplexParser.LETRA) | (1 << simplexParser.SALTOLINEA) | (1 << simplexParser.DIGITO) | (1 << simplexParser.PARABIERTO) | (1 << simplexParser.IMPRIMIR) | (1 << simplexParser.MAXI) | (1 << simplexParser.MINI) | (1 << simplexParser.SENO) | (1 << simplexParser.COSENO) | (1 << simplexParser.TANGENTE) | (1 << simplexParser.EULER) | (1 << simplexParser.LOGARITMO) | (1 << simplexParser.COMENTARIO))) != 0):
                self.state = 56
                self.expresion()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 62
            self.match(simplexParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpresionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return simplexParser.RULE_expresion

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SaltarContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a simplexParser.ExpresionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SALTOLINEA(self):
            return self.getToken(simplexParser.SALTOLINEA, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSaltar" ):
                return visitor.visitSaltar(self)
            else:
                return visitor.visitChildren(self)


    class ProblemasExpresadosContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a simplexParser.ExpresionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def multiobjetivo(self):
            return self.getTypedRuleContext(simplexParser.MultiobjetivoContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProblemasExpresados" ):
                return visitor.visitProblemasExpresados(self)
            else:
                return visitor.visitChildren(self)


    class ImprimirExprContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a simplexParser.ExpresionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IMPRIMIR(self):
            return self.getToken(simplexParser.IMPRIMIR, 0)
        def PARABIERTO(self):
            return self.getToken(simplexParser.PARABIERTO, 0)
        def expresion(self):
            return self.getTypedRuleContext(simplexParser.ExpresionContext,0)

        def PARCERRADO(self):
            return self.getToken(simplexParser.PARCERRADO, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImprimirExpr" ):
                return visitor.visitImprimirExpr(self)
            else:
                return visitor.visitChildren(self)


    class CalcularContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a simplexParser.ExpresionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expMAT(self):
            return self.getTypedRuleContext(simplexParser.ExpMATContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCalcular" ):
                return visitor.visitCalcular(self)
            else:
                return visitor.visitChildren(self)


    class ComentariosContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a simplexParser.ExpresionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def COMENTARIO(self):
            return self.getToken(simplexParser.COMENTARIO, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComentarios" ):
                return visitor.visitComentarios(self)
            else:
                return visitor.visitChildren(self)


    class AsignarContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a simplexParser.ExpresionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def identificador(self):
            return self.getTypedRuleContext(simplexParser.IdentificadorContext,0)

        def IGUAL(self):
            return self.getToken(simplexParser.IGUAL, 0)
        def expMAT(self):
            return self.getTypedRuleContext(simplexParser.ExpMATContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignar" ):
                return visitor.visitAsignar(self)
            else:
                return visitor.visitChildren(self)



    def expresion(self):

        localctx = simplexParser.ExpresionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expresion)
        try:
            self.state = 77
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = simplexParser.AsignarContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.identificador()
                self.state = 65
                self.match(simplexParser.IGUAL)
                self.state = 66
                self.expMAT(0)
                pass

            elif la_ == 2:
                localctx = simplexParser.CalcularContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.expMAT(0)
                pass

            elif la_ == 3:
                localctx = simplexParser.ImprimirExprContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 69
                self.match(simplexParser.IMPRIMIR)
                self.state = 70
                self.match(simplexParser.PARABIERTO)
                self.state = 71
                self.expresion()
                self.state = 72
                self.match(simplexParser.PARCERRADO)
                pass

            elif la_ == 4:
                localctx = simplexParser.SaltarContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 74
                self.match(simplexParser.SALTOLINEA)
                pass

            elif la_ == 5:
                localctx = simplexParser.ProblemasExpresadosContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 75
                self.multiobjetivo()
                pass

            elif la_ == 6:
                localctx = simplexParser.ComentariosContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 76
                self.match(simplexParser.COMENTARIO)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MultiobjetivoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return simplexParser.RULE_multiobjetivo

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MultiObjetivosContext(MultiobjetivoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a simplexParser.MultiobjetivoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def resolver(self):
            return self.getTypedRuleContext(simplexParser.ResolverContext,0)

        def problema(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simplexParser.ProblemaContext)
            else:
                return self.getTypedRuleContext(simplexParser.ProblemaContext,i)

        def SALTOLINEA(self, i:int=None):
            if i is None:
                return self.getTokens(simplexParser.SALTOLINEA)
            else:
                return self.getToken(simplexParser.SALTOLINEA, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiObjetivos" ):
                return visitor.visitMultiObjetivos(self)
            else:
                return visitor.visitChildren(self)



    def multiobjetivo(self):

        localctx = simplexParser.MultiobjetivoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_multiobjetivo)
        self._la = 0 # Token type
        try:
            localctx = simplexParser.MultiObjetivosContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 80 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 79
                self.problema()
                self.state = 82 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==simplexParser.MAXI or _la==simplexParser.MINI):
                    break

            self.state = 84
            self.resolver()
            self.state = 86 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 85
                    self.match(simplexParser.SALTOLINEA)

                else:
                    raise NoViableAltException(self)
                self.state = 88 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ResolverContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return simplexParser.RULE_resolver

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ResolverProblemasContext(ResolverContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a simplexParser.ResolverContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RESOLVER(self):
            return self.getToken(simplexParser.RESOLVER, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitResolverProblemas" ):
                return visitor.visitResolverProblemas(self)
            else:
                return visitor.visitChildren(self)



    def resolver(self):

        localctx = simplexParser.ResolverContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_resolver)
        try:
            localctx = simplexParser.ResolverProblemasContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(simplexParser.RESOLVER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProblemaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return simplexParser.RULE_problema

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ProblemasContext(ProblemaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a simplexParser.ProblemaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def funcionTrans(self):
            return self.getTypedRuleContext(simplexParser.FuncionTransContext,0)

        def restriccion(self):
            return self.getTypedRuleContext(simplexParser.RestriccionContext,0)

        def restricionVariable(self):
            return self.getTypedRuleContext(simplexParser.RestricionVariableContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProblemas" ):
                return visitor.visitProblemas(self)
            else:
                return visitor.visitChildren(self)



    def problema(self):

        localctx = simplexParser.ProblemaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_problema)
        try:
            localctx = simplexParser.ProblemasContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.funcionTrans()
            self.state = 93
            self.restriccion()
            self.state = 94
            self.restricionVariable()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RestricionVariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return simplexParser.RULE_restricionVariable

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class RestriccionesVariablesContext(RestricionVariableContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a simplexParser.RestricionVariableContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CON(self):
            return self.getToken(simplexParser.CON, 0)
        def DOSPUNTOS(self):
            return self.getToken(simplexParser.DOSPUNTOS, 0)
        def SALTOLINEA(self, i:int=None):
            if i is None:
                return self.getTokens(simplexParser.SALTOLINEA)
            else:
                return self.getToken(simplexParser.SALTOLINEA, i)
        def desigualdadVariable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simplexParser.DesigualdadVariableContext)
            else:
                return self.getTypedRuleContext(simplexParser.DesigualdadVariableContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRestriccionesVariables" ):
                return visitor.visitRestriccionesVariables(self)
            else:
                return visitor.visitChildren(self)



    def restricionVariable(self):

        localctx = simplexParser.RestricionVariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_restricionVariable)
        self._la = 0 # Token type
        try:
            localctx = simplexParser.RestriccionesVariablesContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(simplexParser.CON)
            self.state = 97
            self.match(simplexParser.DOSPUNTOS)
            self.state = 99 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 98
                self.match(simplexParser.SALTOLINEA)
                self.state = 101 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==simplexParser.SALTOLINEA):
                    break

            self.state = 109 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 103
                self.desigualdadVariable()
                self.state = 105 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 104
                    self.match(simplexParser.SALTOLINEA)
                    self.state = 107 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==simplexParser.SALTOLINEA):
                        break

                self.state = 111 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==simplexParser.LETRA):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DesigualdadVariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return simplexParser.RULE_desigualdadVariable

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DesigualdadesVariablesContext(DesigualdadVariableContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a simplexParser.DesigualdadVariableContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def variable(self):
            return self.getTypedRuleContext(simplexParser.VariableContext,0)

        def IGUAL(self):
            return self.getToken(simplexParser.IGUAL, 0)
        def expMAT(self):
            return self.getTypedRuleContext(simplexParser.ExpMATContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDesigualdadesVariables" ):
                return visitor.visitDesigualdadesVariables(self)
            else:
                return visitor.visitChildren(self)


    class DesigualdadesVariablesMenorIgualContext(DesigualdadVariableContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a simplexParser.DesigualdadVariableContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def variable(self):
            return self.getTypedRuleContext(simplexParser.VariableContext,0)

        def menorIgual(self):
            return self.getTypedRuleContext(simplexParser.MenorIgualContext,0)

        def expMAT(self):
            return self.getTypedRuleContext(simplexParser.ExpMATContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDesigualdadesVariablesMenorIgual" ):
                return visitor.visitDesigualdadesVariablesMenorIgual(self)
            else:
                return visitor.visitChildren(self)


    class DesigualdadesVariablesMayorIgualContext(DesigualdadVariableContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a simplexParser.DesigualdadVariableContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def variable(self):
            return self.getTypedRuleContext(simplexParser.VariableContext,0)

        def mayorIgual(self):
            return self.getTypedRuleContext(simplexParser.MayorIgualContext,0)

        def expMAT(self):
            return self.getTypedRuleContext(simplexParser.ExpMATContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDesigualdadesVariablesMayorIgual" ):
                return visitor.visitDesigualdadesVariablesMayorIgual(self)
            else:
                return visitor.visitChildren(self)



    def desigualdadVariable(self):

        localctx = simplexParser.DesigualdadVariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_desigualdadVariable)
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = simplexParser.DesigualdadesVariablesContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.variable()
                self.state = 114
                self.match(simplexParser.IGUAL)
                self.state = 115
                self.expMAT(0)
                pass

            elif la_ == 2:
                localctx = simplexParser.DesigualdadesVariablesMayorIgualContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.variable()
                self.state = 118
                self.mayorIgual()
                self.state = 119
                self.expMAT(0)
                pass

            elif la_ == 3:
                localctx = simplexParser.DesigualdadesVariablesMenorIgualContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 121
                self.variable()
                self.state = 122
                self.menorIgual()
                self.state = 123
                self.expMAT(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RestriccionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return simplexParser.RULE_restriccion

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class RestriccionesContext(RestriccionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a simplexParser.RestriccionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RESTRICCIONES(self):
            return self.getToken(simplexParser.RESTRICCIONES, 0)
        def DOSPUNTOS(self):
            return self.getToken(simplexParser.DOSPUNTOS, 0)
        def SALTOLINEA(self, i:int=None):
            if i is None:
                return self.getTokens(simplexParser.SALTOLINEA)
            else:
                return self.getToken(simplexParser.SALTOLINEA, i)
        def desigualdad(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simplexParser.DesigualdadContext)
            else:
                return self.getTypedRuleContext(simplexParser.DesigualdadContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRestricciones" ):
                return visitor.visitRestricciones(self)
            else:
                return visitor.visitChildren(self)



    def restriccion(self):

        localctx = simplexParser.RestriccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_restriccion)
        self._la = 0 # Token type
        try:
            localctx = simplexParser.RestriccionesContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(simplexParser.RESTRICCIONES)
            self.state = 128
            self.match(simplexParser.DOSPUNTOS)
            self.state = 130 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 129
                self.match(simplexParser.SALTOLINEA)
                self.state = 132 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==simplexParser.SALTOLINEA):
                    break

            self.state = 140 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 134
                self.desigualdad()
                self.state = 136 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 135
                    self.match(simplexParser.SALTOLINEA)
                    self.state = 138 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==simplexParser.SALTOLINEA):
                        break

                self.state = 142 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << simplexParser.MENOS) | (1 << simplexParser.LETRA) | (1 << simplexParser.DIGITO) | (1 << simplexParser.PARABIERTO) | (1 << simplexParser.SENO) | (1 << simplexParser.COSENO) | (1 << simplexParser.TANGENTE) | (1 << simplexParser.EULER) | (1 << simplexParser.LOGARITMO))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DesigualdadContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return simplexParser.RULE_desigualdad

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DesigualdadesMayorIgualContext(DesigualdadContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a simplexParser.DesigualdadContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def polinomio(self):
            return self.getTypedRuleContext(simplexParser.PolinomioContext,0)

        def mayorIgual(self):
            return self.getTypedRuleContext(simplexParser.MayorIgualContext,0)

        def expMAT(self):
            return self.getTypedRuleContext(simplexParser.ExpMATContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDesigualdadesMayorIgual" ):
                return visitor.visitDesigualdadesMayorIgual(self)
            else:
                return visitor.visitChildren(self)


    class DesigualdadesContext(DesigualdadContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a simplexParser.DesigualdadContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def polinomio(self):
            return self.getTypedRuleContext(simplexParser.PolinomioContext,0)

        def IGUAL(self):
            return self.getToken(simplexParser.IGUAL, 0)
        def expMAT(self):
            return self.getTypedRuleContext(simplexParser.ExpMATContext,0)

